2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig.in: Fix quoting.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Support big ext2 files.

	* grub-core/fs/ext2.c (grub_ext2_inode): Rename dir_acl to size_high.
	(grub_ext2_read_block): Support triple indirect blocks.
	(grub_ext2_read_file): Use 64-bit types and read size_high.
	(grub_ext2_open): Read size_high.
	Reported by: Ximin Luo.
	Tested by: Manoel Rebelo Abranches.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Handle filenames containing spaces.
	Reported by: Jordan Uggla.
	Tested by: Jordan Uggla.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig.in (grub_script_check): New variable.
	Use grub_script_check instead of grub-script-check.
	Reported by: Barry Jackson.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (menu): Correct the order.
	Reported by: D. Hugh Redelmeier.

2010-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (multiboot_trampoline): Add missing
	jump.

2010-11-08  Manoel Rebelo Abranches <mrabran@br.ibm.com>

	* include/grub/elfload.h (grub_elf32_size): New parameter.
	All users updated.
	Return maximum segments alignment.
	(grub_elf64_size): Likewise.
	* kern/elf.c (grub_elf32_size): New parameter. All users updated.
	Return maximum segments alignment.
	(grub_elf64_size): Likewise.
	* grub-core/loader/powerpc/ieee1275/linux.c:
	(grub_linux_claimmap_iterate): New function. Uses the
	"available" property in the "memory" node for memory allocation
	for kernel in the PowerPC loader.
	(grub_linux_load32): Correctly find linux entry point offset.
	(grub_linux_load64): Likewise.

2010-11-07  Robert Millan  <rmh@gnu.org>

	On mips-yeeloong, build with -march=loongson2f when this flag is
	available (GCC >= 4.4).
	* conf/Makefile.common [COND_mips_yeeloong] (CFLAGS_PLATFORM): Remove
	`-march=mips3'.